--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,23 @@
 		<version>3.1</version>     
 	</dependency>
   </dependencies>
+	<build>
+    	<plugins>
+      		<plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>exec-maven-plugin</artifactId>
+		        <version>1.2.1</version>
+		        <executions>
+		          <execution>
+		            <goals>
+		              <goal>java</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+		        <configuration>
+		          <mainClass>org.rhq.lab.ircbot.App</mainClass> 
+		        </configuration>
+			</plugin>
+    	</plugins>
+	</build>
 </project>
