--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.rhq.lab</groupId>
   <artifactId>ircbot</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-geardpoc</version>
   <packaging>jar</packaging>
 
   <name>ircbot</name>
@@ -21,11 +21,6 @@
       <version>6.1.1</version>
       <scope>test</scope>
     </dependency>
-     <dependency>
-		  <groupId>com.redhat</groupId>
-		  <artifactId>jon.qeapi</artifactId>
-		  <version>0.0.1-SNAPSHOT</version>
-    </dependency>   
   	<dependency>
     	<groupId>org.pircbotx</groupId>
         <artifactId>pircbotx</artifactId>
@@ -39,11 +34,28 @@
     <dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
-		<version>3.1</version>     
+		<version>3.3.2</version>     
+	</dependency>
+	<dependency>
+	  <groupId>com.google.guava</groupId>
+	  <artifactId>guava</artifactId>
+	  <version>17.0</version>
+	</dependency>	
+	<dependency>
+		<groupId>org.vnguyen</groupId>
+		<artifactId>geard-java</artifactId>
+		<version>0.0.1-SNAPSHOT</version>	
 	</dependency>
   </dependencies>
 	<build>
     	<plugins>
+	        <plugin>
+	            <artifactId>maven-compiler-plugin</artifactId>
+	            <configuration>
+	                <source>1.7</source>
+	                <target>1.7</target>
+	            </configuration>
+	        </plugin>
 			<plugin>
 			  <artifactId>maven-assembly-plugin</artifactId>
 			  <version>2.4</version>
